--- a/hw-03-partB.Rmd
+++ b/hw-03-partB.Rmd
@@ -240,3 +240,65 @@ par(mar = c(1, 3, 3, 1),
 plot(mcfit)
 
 ```
+
+
+#### Perform a quick sensitivity analysis by slightly changing the priors and reporting on the impact you see on your inferential conclusions.
+
+```{r, message = FALSE, warning=FALSE}
+# Sensitivity Analysis ----------------------------------------------------
+
+dd2 <- list(mu = 1,      # parameters of prior distribution
+           tau_0 = 0.1,
+           a = 0.1, 
+           b = 0.1,
+           N = 208,
+           y.log = c( 0.678, 0.402, 0.132, 0.27, 0.284, 0.12, 0.32, 0.086, 0.316, 
+                      0.579, 0.08, 0.479, 0.299, 0.028, 0.2, 0.085, 0.377, 0.768, 0.525, 
+                      0.337, 0.576, 0.068, 0.18, 0.091, 0.364, 0.671, 0.071, 0.095, 0.316, 
+                      0.221, 0.239, 0.518, 0.039, 0.395, 0.409, 0.375, 0.255, 0.584, 0.581, 
+                      0.231, 0.237, 0.76, 0.543, 0.649, 0.768, 0.415, 0.548, 0.236, 0.052, 
+                      0.056, 0.575, 0.174, 0.447, 0.368, 0.019, 0.265, 0.037, 0.062, 0.203, 
+                      0.074, 0.698, 0.55, 0.435, 0.699, 0.137, 0.054, 0.025, 0.693, 0.063, 
+                      0.32, 0.585, 0.644, 0.061, 0.349, 0.352, 0.745, 0.111, 0.545, 0.182, 
+                      0.599, 0.2, 0.373, 0.236, 0.067, 0.293, 0.671, 0.058, 0.419, 0.782, 
+                      0.324, 0.729, 0.51, 0.029, 0.042, 0.392, 0.481, 0.727, 0.185, 0.269, 
+                      0.732, 0.243, 0.695, 0.291, 0.703, 0.595, 0.191, 0.059, 0.573, 0.081, 
+                      0.571, 0.615, 0.084, 0.274, 0.196, 0.383, 0.195, 0.585, 0.477, 0.118, 
+                      0.25, 0.375, 0.066, 0.072, 0.082, 0.354, 0.158, 0.78, 0.126, 0.043, 
+                      0.241, 0.038, 0.034, 0.536, 0.198, 0.066, 0.284, 0.19, 0.026, 0.05, 
+                      0.079, 0.742, 0.231, 0.474, 0.05, 0.042, 0.136, 0.032, 0.157, 0.163, 
+                      0.063, 0.289, 0.854, 0.341, 0.274, 0.205, 0.654, 0.269, 0.106, 0.366, 
+                      0.34, 0.112, 0.35, 1.018, 0.791, 0.711, 0.796, 0.289, 0.345, 0.298, 
+                      0.672, 0.04, 0.502, 0.841, 0.243, 0.05, 0.699, 0.863, 0.816, 0.854, 
+                      0.594, 0.375, 0.316, 1.03, 0.951, 0.79, 0.772, 0.859, 0.951, 0.933, 
+                      1.129, 0.739, 0.925, 0.796, 1.029, 1.136, 1.092, 1.036, 0.818, 1.413, 
+                      1.022, 0.663, 1.078, 1.461, 1.19, 0.986, 1.099, 0.924, 1.23 )
+)
+
+
+fit2 <- jags(model = model, init = init, 
+            param = c("location", "scale"), 
+            data = dd2, n.iter = 10000, 
+            n.chain = 3, n.burn = 1000, n.thin = 1,
+            DIC = FALSE)
+
+
+fit2
+```
+
+Slightly changing our priors, we got almost the same inferential results. Moreover, we got a similar standard deviation for the parameter estimates.
+The model turns out to be not so sensible to our choices for the priors.
+
+```{r, fig.align = "center", fig.width = 10}
+# Prior plots ------------------------------------------------------------
+
+par(mfrow=c(1,2))
+curve(dnorm(x, dd[["mu"]], 1/dd[["tau_0"]]), ylim=c(0,0.2), col = "orchid", lwd = 3, main = "Location priors", ylab = 'probability density')
+curve(dnorm(x, dd2[["mu"]], 1/dd2[["tau_0"]]), add = T, col = "purple", lwd = 3)
+legend("topleft", col = c("orchid", "purple"), legend = c("main analysis", "sensitivity analysis"), lwd = 3, bty = 'n')
+
+curve(dgamma(x, dd[["a"]], dd[["b"]]), ylim=c(0,1), col= "orchid", lwd = 3, main = "Scale priors",  ylab = 'probability density')
+curve(dgamma(x, dd2[["a"]], dd2[["b"]]), add = T, col = "purple", lwd = 3)
+legend("topright", col = c("orchid", "purple"), legend = c("main analysis", "sensitivity analysis"), lwd = 3, bty = 'n')
+
+```
